<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/edit_bd_title"
            android:id="@+id/textView2"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp" />

        <Button
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/instr_update"
            android:id="@+id/button_instruction"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/breakdown_update"
            android:id="@+id/button_breakdown"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/question_update"
            android:id="@+id/button_question"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

</LinearLayout>